[package]
name = "process_hollowing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows-sys]
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System",
    "Wdk_System_Threading",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug"
]
